Navigation.cydsn/REBUILD.log
--------------- Rebuild Started: 03/27/2021 17:21:50 Project: Navigation, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\CortexM3\ARM_GCC_541\Debug\main.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyfitter_cfg.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cymetadata.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\HallEffect.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\HE_Interrupt.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\LCD.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\LCD_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\LCD_LCDPort.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Cm3Start.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyBootAsmGnu.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyDmac.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyFlash.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyLib.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyPm.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CySpc.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyutils.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cy_em_eeprom.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\PWM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\PWM_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Clock_1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Timer.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Timer_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Motor.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_INT.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_BOOT.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_IntClock.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Clock_2.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CamOut.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\HSync.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\StartFrame.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\VideoTimer.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\VideoTimer_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\OddEven.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Black.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Counter.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Counter_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Comp_1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Comp_1_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Vcomp_225V.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\VerifyLeftBlackEdge.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\FirstLine.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Navigation.hex"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Navigation.elf"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Navigation.map"
Deleting file ".\Navigation.cycdx"
Deleting file ".\Navigation.svd"
Deleting file ".\Navigation.rpt"
Deleting file ".\Navigation_timing.html"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\.deps\SOURCE_C__ARM_GCC_GENERIC.P"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\.deps\SOURCE_ASM__ARM_GCC_GENERIC.P"
cydsfit.exe -.appdatapath "C:\Users\nkhedkar\AppData\Local\Cypress Semiconductor\PSoC Creator\4.2" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\nkhedkar\Documents\PSoC Creator\ELE302 Workspace\navigation\Navigation.cydsn\Navigation.cyprj" -d CY8C5868AXI-LP035 -s "C:\Users\nkhedkar\Documents\PSoC Creator\ELE302 Workspace\navigation\Navigation.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Log: apr.M0058: The analog placement iterative improvement is 46% done. (App=cydsfit)
Log: apr.M0058: The analog placement iterative improvement is 97% done. (App=cydsfit)
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
main.c: In function 'inter2':
main.c:82:31: error: 'OddEvenTimer_' undeclared (first use in this function)
     sprintf(uartbuf, "true\n",OddEvenTimer_);
                               ^
main.c:82:31: note: each undeclared identifier is reported only once for each function it appears in
main.c: In function 'main':
main.c:145:9: warning: unused variable 'halfLPF' [-Wunused-variable]
     int halfLPF = LPF / 2 + 1;
         ^
--------------- Rebuild Failed: 03/27/2021 17:22:25 ---------------
